- Criado a estrutura de conexão com banco de dados. #5

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -17,3 +17,8 @@ logging:
     timeEncoder: "iso8601"
     durationEncoder: "string"
     callerEncoder: "fullpath"
+
+# Configurações do banco de dados
+database:
+  driver: sqlite3
+  datasource: ./data/database.db
